# fp_core_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: OrientationNautical.msg  Pose.msg
srv/: Calibrate.srv  DigitalInputOutput.srv  GetGridPoints.srv  GetInt.srv  GetStatus.srv  Initialize.srv  InverseKinematics.srv  Kinematics.srv  Login.srv  MoveTool.srv  PowerUp.srv  SetJoints.srv  SimplePath.srv  TestScript.srv
